Mon Oct  6 02:58:14 2003  Tim Janik  <timj@gtk.org>

	* docs/bse-categories.txt: revamped category conventions to better
	reflect module, script and procedure types we now have. described
	automatic arguments upon procedure invocation.

	* beast-gtk/bstapp.c: major menu cleanup. offer csynth/snet/song
	utility procedures.

	* beast-gtk/bstmenus.[hc] (bst_menu_config_from_cats): allow fallback
	stock icon and partial path substitution.

	* beast-gtk/bstprocedure.c: ignore unnamed preset args.

	* beast-gtk/bstsnetrouter.c: improved utility handling in popup menu.

	* beast-gtk/bstutils.h: add more stock aliases. a bunch of the icons
	used are just workarounds for missing icons.

	* beast-gtk/gxk/gxkutils.[hc]: added gxk_item_factory_sensitize().

Sun Oct  5 10:34:54 2003  Tim Janik  <timj@gtk.org>

	* docs/quickstart.texi: adapt to changes in beast.

Sun Oct  5 08:49:22 2003  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstsnetrouter.c: add /Modules/Spatial/ to palette.

Sun Oct  5 06:06:38 2003  Tim Janik  <timj@gtk.org>

	* docs/site-download.texi: reordered sections,
	fixed freedesktop.org link.

Fri Oct  3 19:55:53 2003  Alper Ersoy  <dirt@gtk.org>

	* TODO: removed fixed items.

Fri Oct  3 13:53:29 2003  Tim Janik  <timj@gtk.org>

	* docs/generated/*: generate texiutils.texi instead of version.texi,
	and include ../teximacros.texi.

	* docs/teximacros.texi: supply project specific macros.

	* shell/bse-scm-glue.boot: implement (bse-shell-auto-play) which
	is used if .bse files are given as comand-line args.

	* docs/bsesh.1.texi: 
	* docs/beast.1.texi: added manual pages to beast.

Fri Oct  3 08:53:20 2003  Tim Janik  <timj@gtk.org>

	* beast-gtk/icons/properties.xcf:
	* beast-gtk/icons/properties.png:
	* beast-gtk/icons/properties-reset.png: new icons based on
	icons from Gtk+-2.2.

	* beast-gtk/bstsnetrouter.c (bst_snet_router_root_event): offer
	property reset menu item for modules.

	* beast-gtk/bstcanvassource.[hc]: renamed some functions. added