@@ -58,21 +58,21 @@ static const BstCatalogTool tools_en[] = {
     BST_STOCK_QNOTE_16,			"6",
     "Quantize to sixteenth note boundaries",	NULL,
   },
-  { CKEY ("TrackRoll/Editor"),		"_Editor",
-    BST_STOCK_PART_EDITOR,		"E",
-    "Start part editor",		NULL,
-  },
-  { CKEY ("TrackRoll/Delete"),		"_Delete",
-    BST_STOCK_TRASHCAN,			"D",
-    "Delete part",			NULL,
-  },
   { CKEY ("TrackRoll/Insert"),		"_Insert",
-    BST_STOCK_PART,			"I",
-    "Insert/rename/move parts (mouse button 1 and 2)", NULL,
+    BST_STOCK_PART_EDITOR,		"I",
+    "Insert/edit/move parts (mouse button 1 and 2)", NULL,
   },
   { CKEY ("TrackRoll/Link"),		"Lin_k",
     BST_STOCK_PART_COPY,		"K",
     "Link or move parts (mouse button 1 and 2)", NULL,
+  },
+  { CKEY ("TrackRoll/Rename"),		"_Rename",
+    BST_STOCK_PART_TEXT,		"E",
+    "Rename parts", NULL,
+  },
+  { CKEY ("TrackRoll/Delete"),		"_Delete",
+    BST_STOCK_TRASHCAN,			"D",
+    "Delete parts",			NULL,
   },
 #if 0
 #endif
