@@ -30,8 +30,8 @@ typedef enum /*< skip >*/
   /* choose IDs that are unlikely to clash with category IDs */
   BST_TRACK_ROLL_TOOL_INSERT		= G_MAXINT - 1000,
   BST_TRACK_ROLL_TOOL_LINK,
-  BST_TRACK_ROLL_TOOL_EDIT_NAME,
-  BST_TRACK_ROLL_TOOL_EDITOR_ONCE,
+  BST_TRACK_ROLL_TOOL_RENAME,
+  BST_TRACK_ROLL_TOOL_EDITOR,
   BST_TRACK_ROLL_TOOL_MOVE,
   BST_TRACK_ROLL_TOOL_DELETE,
   BST_TRACK_ROLL_TOOL_MOVE_TICK_POINTER,
